// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when closed 1`] = `
<Dialog
  isOpen={false}
  onCancel={[MockFunction]}
  shouldShowButtons={false}
  shouldUnmountOnHide={false}
  title="Actions"
>
  <div
    className="root"
  >
    <button
      className="rowButton"
    >
      <span
        className="row"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
        <span
          className="text"
        >
          <mock-FormattedMessage
            defaultMessage="Move to"
            id="wishlistMoreActionsDialog.move"
          />
        </span>
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      className="rowButton"
    >
      <span
        className="row"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              rx="2"
              ry="2"
              width="13"
              x="9"
              y="9"
            />
            <path
              d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
            />
          </svg>
        </span>
        <span
          className="text"
        >
          <mock-FormattedMessage
            defaultMessage="Copy to"
            id="wishlistMoreActionsDialog.copy"
          />
        </span>
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      className="rowButton"
      onClick={[MockFunction]}
    >
      <span
        className="row"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </span>
        <span
          className="text"
        >
          <mock-FormattedMessage
            defaultMessage="Remove"
            id="wishlistMoreActionsDialog.delete"
          />
        </span>
      </span>
    </button>
  </div>
</Dialog>
`;

exports[`renders correctly when open 1`] = `
<Dialog
  isOpen={true}
  onCancel={[MockFunction]}
  shouldShowButtons={false}
  shouldUnmountOnHide={false}
  title="Actions"
>
  <div
    className="root"
  >
    <button
      className="rowButton"
    >
      <span
        className="row"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
        <span
          className="text"
        >
          <mock-FormattedMessage
            defaultMessage="Move to"
            id="wishlistMoreActionsDialog.move"
          />
        </span>
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      className="rowButton"
    >
      <span
        className="row"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              rx="2"
              ry="2"
              width="13"
              x="9"
              y="9"
            />
            <path
              d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
            />
          </svg>
        </span>
        <span
          className="text"
        >
          <mock-FormattedMessage
            defaultMessage="Copy to"
            id="wishlistMoreActionsDialog.copy"
          />
        </span>
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      className="rowButton"
      onClick={[MockFunction]}
    >
      <span
        className="row"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="3 6 5 6 21 6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </span>
        <span
          className="text"
        >
          <mock-FormattedMessage
            defaultMessage="Remove"
            id="wishlistMoreActionsDialog.delete"
          />
        </span>
      </span>
    </button>
  </div>
</Dialog>
`;
